2013-10-09  Raymond Penners  <raymond.penners@intenct.nl>

	* George Whewell contributed Instagram support, thanks!

2013-09-09  Raymond Penners  <raymond.penners@intenct.nl>

	* Refactored adapter methods relating to creating and populating
	`User` instances.

2013-09-05  Raymond Penners  <raymond.penners@intenct.nl>

	* User creation methods in the `Default(Social)AccountAdapter` now
	have access to the `request`.

2013-08-31  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.13.0 released.

2013-08-30  Raymond Penners  <raymond.penners@intenct.nl>

	* Koichi Harakawa contributed a Japanese translation, thanks!

	* Added `is_open_for_signup` to DefaultSocialAccountAdapter.

2013-08-29  Raymond Penners  <raymond.penners@intenct.nl>

	* Added VK provider support.

2013-08-16  Raymond Penners  <raymond.penners@intenct.nl>

	* Marcin Spoczynski contributed a Polish translation, thanks!

2013-07-23  Raymond Penners  <raymond.penners@intenct.nl>

	* All views are now class-based.

	* The password reset from key success response now redirects to a
	"done" view (`/accounts/password/reset/key/done/`). This view has
	its own `account/password_reset_from_key_done.html` template. In
	previous versions, the success template was intertwined with the
	`account/password_reset_from_key.html` template.

2013-07-19  Raymond Penners  <raymond.penners@intenct.nl>

	* `django.contrib.messages` is now optional.

2013-07-12  Raymond Penners  <raymond.penners@intenct.nl>

	* "jresins" contributed a simplified Chinese, thanks!

2013-07-01  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.12.0 released.

2013-06-29  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for re-authenticated (forced prompt) by means of a
	new `action="reauthenticate"` parameter to the `{%
	provider_login_url %}`

2013-06-28  Raymond Penners  <raymond.penners@intenct.nl>

	* Roberto Novaes contributed a Brazilian Portuguese translation,
	thanks!
