@@ -37,3 +37,4 @@ Tomas Marcik
 Koichi Harakawa
 Marcin Spoczynski
 George Whewell
+Stuart Ross
