@@ -41,6 +41,7 @@ INSTALLED_APPS = (
     'allauth',
     'allauth.account',
     'allauth.socialaccount',
+    'allauth.socialaccount.providers.angellist',
     'allauth.socialaccount.providers.dropbox',
     'allauth.socialaccount.providers.facebook',
     'allauth.socialaccount.providers.google',
