@@ -1,3 +1,7 @@
+2013-10-19  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Stuart Ross contributed AngelList support, thanks!
+
 2013-10-09  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* George Whewell contributed Instagram support, thanks!
